<resources>
    <string name="app_name">Bubbl</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="camera_dialog_title">Camera Access</string>
    <string name="camera_dialog_message">(This app) needs camera permission to run. Camera preview will be unavailable until camera permission granted.</string>
    <string name="camera_dialog_positive_button">Ok</string>
    <string name="camera_dialog_negative_button">Exit app</string>
    <string name="camera_dialog_neutral_button">Grant Permission</string>
    <string name="device_not_supported_message">Your device is not compatible with this app. We are sorry about that :(</string>
    <string name="request_permission">Give permission?</string>
    <string name="camera_error">There was an error.</string>
    <string name="intro_message">INFO</string>
    <string name="title_activity_require_login">RequireLoginActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="create_account">Create Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_username_invalid">Please enter your username.</string>
    <string name="login_password_invalid">Please enter your password.</string>

    <string name="title_activity_create_account">CreateAccount</string>
    <string name="create_account_first_name">First Name</string>
    <string name="create_account_last_name">Last Name</string>
    <string name="create_account_username">Username</string>
    <string name="create_account_pasword">Password</string>
    <string name="create_account_confirm_password">Confirm Password</string>
    <string name="create_account_email">Email Address</string>
    <string name="create_account_button">Create Account</string>
    <string name="create_account_username_error">Username must be at least 4 characters.</string>
    <string name="create_account_first_name_error">Please enter your first name.</string>
    <string name="create_account_last_name_error">Please enter your last name.</string>
    <string name="create_account_password_error">Password must be at least 8 characters.</string>
    <string name="create_account_email_error">Please enter a valid email address.</string>
    <string name="create_account_password_match_error">Passwords do not match.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="group_dialog_title">Select group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_group_detail_view">GroupDetailView</string>
    <string name="title_create_group_dialog">New Group</string>
    <string name="create_group_name_hint">Group name</string>
    <string name="create_group_button">Create</string>
    <string name="no_members">No members</string>
    <string name="create_group_name_error">Please enter a group name</string>
    <string name="create_group_success">Group created</string>
    <string name="create_group_failure">Error creating group</string>
    <string name="view_invites">View Invites</string>
    <string name="title_activity_view_invites">Invites</string>
    <string name="no_invite_message">You have no pending invitations.</string>
    <string name="join_group_button">Join</string>
    <string name="delete_invite_button">Delete</string>
    <string name="invite_accept_success">Invite accepted</string>
    <string name="invite_delete_success">Invite deleted</string>
    <string name="invite_delete_failure">Problem deleting invite.</string>
    <string name="invite_accept_failure">Problem accepting invite.</string>
    <string name="members_in_group">Friends</string>
    <string name="group_empty_message">There are no friends in this group. Invite some!</string>
    <string name="invite_friends_button">Invite</string>
    <string name="invite_member_title">Invite a Friend</string>
    <string name="invite_member_username_hint">Username</string>
    <string name="invite_button">Send</string>
    <string name="invite_user_bad_username">Please enter a username</string>
    <string name="invite_user_success">Invite sent</string>
    <string name="invite_user_failure">Invite failed. Try again later.</string>
    <string name="user_not_found">User does not exist</string>
    <string name="albums">Albums</string>
    <string name="new_album_button_text">Create</string>
    <string name="create_album_name">Album name</string>
    <string name="create_album_button">Create</string>
    <string name="create_album_title">New album</string>
    <string name="album_created">Album created</string>
    <string name="album_create_fail">Failed to create album.</string>
    <string name="create_album_bad_name">Please enter an album name</string>
    <string name="album_dialog_title">Select Album</string>
    <string name="group_default">None selected</string>
    <string name="album_default">None selected</string>
    <string name="title_activity_view_album_images">ViewAlbumImagesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_group_selected_warning">No group selected. Create one if you don\'t have any.</string>
    <string name="no_album_selected_warning">No album selected. Create one if you don\'t have any.</string>
    <string name="no_albums_message">This group doesn\'t have any albums. Create one in the group settings.</string>
    <string name="no_album_create">There are no albums yet. Tap create to make one!</string>
    <string name="duplicate_album_message">Album named %1$s already exists.</string>
    <string name="no_images_message">There are no images in this album. Select this album and take some pictures to share with your friends.</string>
</resources>
