<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jeff_fennell.capstone.GroupDetailView"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/members_in_group"
                android:textIsSelectable="false"
                android:textSize="25sp"
                android:id="@+id/group_detail_name"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/invite_member_button"
                android:text="@string/invite_friends_button"
                android:onClick="openInviteDialog"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_empty_message"
            android:visibility="invisible"
            android:text="@string/group_empty_message"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <it.sephiroth.android.library.widget.HListView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/members_in_group"
            android:layout_weight="0">
        </it.sephiroth.android.library.widget.HListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                android:textIsSelectable="false"
                android:textSize="25sp"
                android:id="@+id/group_albums"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_album_button"
                android:text="@string/new_album_button_text"
                android:onClick="openCreateAlbumDialog"/>
        </LinearLayout>
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:id="@+id/album_list">
    </GridView>
</LinearLayout>
